--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "google-maps-react": "^2.0.6",
     "hamburgers": "^1.1.3",
     "jquery": "^3.6.0",
-    "node-sass": "^7.0.0",
     "react": "^17.0.2",
     "react-app-rewired": "^2.1.8",
     "react-dom": "^17.0.2",
@@ -50,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.54.0"
   }
 }
